Rewrite README for end users; add LICENSE
Leads with which Macs this actually helps (and which it doesn't), then
install, verification, and the JVM-args step that matters more than the mod.
Benchmark and design notes moved below the fold.

Also drops the removed Retina feature from the mod description.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>